# aicomm

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  _typos.toml  ai.rest  test.rest
.github/workflows/: build.yml
chat/: Cargo.toml  deny.toml
chat/ai_sdk/: Cargo.toml
chat/ai_sdk/examples/: openai.rs
chat/ai_sdk/src/: lib.rs
chat/ai_sdk/src/adapters/: ollama.rs  openai.rs
chat/analytics-server/: Cargo.toml  build.rs
chat/analytics-server/examples/: db.rs  sender.rs
chat/analytics-server/src/: config.rs  events.rs  extractors.rs  handler.rs  handlers.rs  lib.rs  openapi.rs
chat/analytics-server/src/pb/: analytics.rs
chat/bot-server/: Cargo.toml
chat/bot-server/src/: config.rs  indexer.rs  lib.rs  notif.rs
chat/chat_core/: Cargo.toml
chat/chat_core/src/: lib.rs
chat/chat_core/src/middlewares/: auth.rs
chat/chat_core/src/utils/: jwt.rs
chat/chat_server/: Cargo.toml
chat/chat_server/src/: agent.rs  error.rs  lib.rs  openapi.rs
chat/chat_server/src/handlers/: agent.rs  chat.rs  messages.rs  workspace.rs
chat/chat_server/src/middlewares/: chat.rs
chat/chat_server/src/models/: agent.rs  messages.rs
chat/chat_test/: Cargo.toml
chat/migrations/: 20250211002539_agent.sql  20250305004418_agent_adapter.sql
chat/notify_server/: Cargo.toml
chatapp/: deny.toml  package.json
chatapp/src/: main.js  utils.js
chatapp/src-tauri/: Cargo.toml
chatapp/src-tauri/src/: lib.rs
chatapp/src/analytics/: event.js
chatapp/src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
chatapp/src/store/: index.js
chatapp/src/views/: Login.vue  Register.vue
protos/: clickhouse.sql  messages.proto
sql/: analytics_events.sql
swiftide-pgvector/: Cargo.toml
swiftide-pgvector/examples/: indexer.rs  retriever.rs
swiftide-pgvector/src/: persist.rs  retrieve.rs
