[workspace]
members = [
  "chat_server",
  "chat_core",
  "notify_server",
  "chat_test",
  "ai_sdk",
  "bot-server",
  "analytics-server",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
  # "macros",
] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
dashmap = "6.1.0"
jwt-simple = "0.12.12"
notify-server = { path = "./notify_server" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
swiftide-pgvector = { path = "../swiftide-pgvector" }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
  "compression-full",
  "cors",
  "fs",
  "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.13.1", features = ["v7", "serde"] }
