[package]
name = "swiftide-pgvector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
derive_builder = "0.20.2"
pgvector = { version = "0.4.0", features = ["sqlx"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "uuid"] }
swiftide-core = "0.22.2"
tracing = "0.1.41"

[dev-dependencies]
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-rustls"] }
swiftide = { version = "0.22.2", features = ["fastembed", "ollama", "tree-sitter", "openai"] }
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
