[package]
name = "analytics-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat-core = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clickhouse = { version = "0.13.2", features = ["rustls-tls", "time"] }
futures-util = "0.3.31"
prost = "0.13.5"
prost-types = "0.13.5"
serde = { workspace = true }
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }

[build-dependencies]
anyhow = { workspace = true }
prost-build = "0.13.5"
proto-builder-trait = { version = "0.6.2", features = [
    "prost",
], default-features = false }

[dev-dependencies]
clickhouse = { version = "0.13.2", features = [
    "rustls-tls",
    "time",
    "test-util",
] }
